# Brainstorm-Rust

./: .gitattributes  .gitignore  .luacheckrc  AGENTS.md  BalatroSource_Guide.md  Brainstorm.lua  NOTICE.md  README.md  UI.lua  config.lua  lovely.toml  mise.toml  steamodded_compat.lua
.github/workflows/: dev-release.yml  release.yml
Immolate/: BENCH.md  Cargo.toml  build.rs
Immolate/CPP/: brainstorm.cpp  functions.cpp  functions.hpp  immolate.hpp  instance.hpp  items.hpp  rng.cpp  rng.hpp  search.hpp  seed.cpp  seed.hpp  util.cpp  util.hpp
Immolate/Rust/: BENCH.md  Cargo.toml  PLAN.md  build.rs
Immolate/Rust/src/: bench_cases.rs  ffi.rs  filters.rs  instance.rs  lib.rs
Immolate/Rust/src/cuda/: brainstorm_cuda.cu
Immolate/Rust/src/engine/: cuda.rs  mod.rs  search.rs  seed.rs
Immolate/scripts/: bench_current_compare.py
Immolate/src/: bench_cases.rs  ffi.rs  filters.rs  item.rs  lib.rs  rng.rs  search.rs  seed.rs
Immolate/src/cuda/: brainstorm_cuda.cu
Immolate/src/engine/: config.rs  cuda.rs  kernels.rs  mod.rs  rng.rs  search.rs  tables.rs  trace.rs
tests/: lua_lifecycle_smoke.lua  lua_ui_smoke.lua
