[package]
name = "immolate"
version = "3.6.0"
edition = "2024"
rust-version = "1.96.0"
publish = false
license-file = "../LICENSE"

[lib]
name = "immolate"
crate-type = ["cdylib", "rlib"]

# Practical strict-by-default linting baseline.
[lints.rust]
missing_docs = "allow"
unreachable_pub = "warn"
unsafe_code = "deny"

[lints.clippy]
# Set lint groups with lower priority
all = { level = "warn", priority = -1 }
complexity = { level = "warn", priority = -1 }
correctness = { level = "deny", priority = -1 }
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
suspicious = { level = "deny", priority = -1 }

# Numeric casts are common at system and boundary layers. Tighten per project
# when conversions need stronger guarantees.
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"

# Specific lints with higher priority
dbg_macro = "deny"
panic = "warn"
todo = "warn"
unimplemented = "warn"
unwrap_used = "warn"

# Commonly noisy pedantic lints. Tighten these per project when they add signal.
cognitive_complexity = "allow"
manual_midpoint = "allow"
match_wildcard_for_single_variants = "allow"
missing_const_for_fn = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
needless_range_loop = "allow"
needless_pass_by_value = "allow"
# The crate exposes a small root facade; explicit crate visibility inside its
# private implementation modules is intentional and checked by unreachable_pub.
redundant_pub_crate = "allow"
struct_excessive_bools = "allow"
struct_field_names = "allow"
too_many_lines = "allow"

# The RNG and seed code preserves Lua/Balatro behavior exactly. These lints
# suggest cleaner Rust but can change floating-point rounding or obscure
# constants that were copied intentionally.
approx_constant = "allow"
excessive_precision = "allow"
float_cmp = "allow"
suboptimal_flops = "allow"
unreadable_literal = "allow"
useless_let_if_seq = "allow"
while_float = "allow"

[profile.dev]
overflow-checks = true

[profile.release]
codegen-units = 1
debug = false
lto = "fat"
opt-level = 3
panic = "abort"
strip = true
